# astroalign

./: .gitignore  .travis.yml  MANIFEST.in  README.md  aabench.py  aaprof.py  astroalign.py  ez_setup.py  flux_conserv_prof.py  index.html  pyproject.toml  requirements.txt  setup.py  tea.yaml  tox.ini
.github/workflows/: aa-ci.yml  coverage.yml
astroalign/: __init__.py  align.py  ransac.py
benchmarks/: 20191022_aabench.py  20191023_aaprof.csv  flux_bench.py  time_bench.py  time_regression.py
benchmarks/flux_benchmarks/: 20191104.csv
benchmarks/time_benchmarks/: 20191023.csv
benchmarks/time_regressions/: 20200220.csv
debug/wcs/: debug_minimal_example.ipynb  example_working.ipynb  fit_tan_wcs_reverse_engineering.ipynb
docs/: Makefile  api.rst  code.rst  conf.py  examples.rst  index.rst  installation.rst  make.bat  mask.rst  methods.rst  tutorial.rst
tests/: __init__.py  requirements.txt  test_align.py
